--- a/app/src/main/res/layout/fragment_calender.xml
+++ b/app/src/main/res/layout/fragment_calender.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent"
         >
 
-        <CalendarView
+        <il.ac.huji.cs.postpc.mymeds.views.CalendarView
             android:id="@+id/calender_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
