--- a/app/src/main/res/layout/activity_appointments.xml
+++ b/app/src/main/res/layout/activity_appointments.xml
@@ -52,6 +52,37 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/no_appointments_message"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/linearLayout2"
+        app:layout_constraintVertical_bias="0.5">
+
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_gravity="center"
+            android:foreground="@drawable/ic_event_black_24dp"
+            android:foregroundTint="@color/common_google_signin_btn_text_dark_disabled"
+
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:text="Nothing here..."
+            android:textAlignment="center"
+            android:layout_gravity="center"
+            android:textColor="@color/common_google_signin_btn_text_dark_disabled"
+            android:textSize="30sp" />
+
+    </LinearLayout>
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="0dp"
