--- a/app/src/main/res/layout/activity_prescriptions.xml
+++ b/app/src/main/res/layout/activity_prescriptions.xml
@@ -14,7 +14,7 @@
         android:background="?attr/colorPrimary"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         android:gravity="start"
-        app:title="Perceptions"
+        app:title="Prescriptions"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"/>
@@ -52,6 +52,37 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/no_prescriptions_message"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/linearLayout2"
+        app:layout_constraintVertical_bias="0.5">
+
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_gravity="center"
+            android:foreground="@drawable/ic_prescription_bottle_solid"
+            android:foregroundTint="@color/common_google_signin_btn_text_dark_disabled"
+
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:text="Nothing here..."
+            android:textAlignment="center"
+            android:layout_gravity="center"
+            android:textColor="@color/common_google_signin_btn_text_dark_disabled"
+            android:textSize="30sp" />
+
+    </LinearLayout>
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="0dp"
@@ -73,14 +104,14 @@
             android:orientation="vertical">
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/future_perceptions"
+                android:id="@+id/future_prescriptions"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
             </androidx.recyclerview.widget.RecyclerView>
 
             <TextView
-                android:id="@+id/past_perceptions_tv"
+                android:id="@+id/past_prescriptions_tv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
@@ -90,7 +121,7 @@
                 android:textStyle="bold" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/past_perceptions"
+                android:id="@+id/past_prescriptions"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -101,7 +132,7 @@
     </androidx.core.widget.NestedScrollView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/perception_add_fab"
+        android:id="@+id/prescription_add_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
