--- a/app/src/main/res/layout/fragment_medicines.xml
+++ b/app/src/main/res/layout/fragment_medicines.xml
@@ -30,7 +30,33 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/no_medicines_message"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical">
 
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_gravity="center"
+            android:foreground="@drawable/ic_pills_solid"
+            android:foregroundTint="@color/common_google_signin_btn_text_dark_disabled"
+
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:text="Nothing here..."
+            android:textAlignment="center"
+            android:layout_gravity="center"
+            android:textColor="@color/common_google_signin_btn_text_dark_disabled"
+            android:textSize="30sp" />
+
+    </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/medicines_add_fab"
